--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     body {
       margin: 0;
-      font-family: 'Orbitron', sans-serif;
+      font-family: 'Orbitron', 'Arial', sans-serif;
       background: var(--bg);
       color: #ffffff;
       display: flex;
