--- a/index.html
+++ b/index.html
@@ -3,22 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Выбор вейпа</title>
+    <title>Вейп Выбор</title>
     <style>
+        /* Global Styles */
         body {
             font-family: Arial, sans-serif;
-            background: #1a1a1a;
-            color: white;
-            text-align: center;
             margin: 0;
             padding: 0;
+            background: #121212;
+            color: white;
+            text-align: center;
+            overflow: hidden;
         }
 
         h1 {
-            color: #fff;
+            font-size: 3em;
             padding: 20px;
-            background: #3c3c3c;
-            border-bottom: 2px solid #fff;
+            background: linear-gradient(45deg, #6a5fd6, #0000ff);
+            color: white;
+            text-transform: uppercase;
+            animation: glow 1.5s ease-in-out infinite alternate;
+        }
+
+        @keyframes glow {
+            0% { text-shadow: 0 0 10px #ff00ff, 0 0 20px #ff00ff, 0 0 30px #ff00ff; }
+            100% { text-shadow: 0 0 10px #00f2ff, 0 0 20px #00f2ff, 0 0 30px #00f2ff; }
         }
 
         .section {
@@ -32,17 +41,55 @@
         .btn {
             background: linear-gradient(to right, #6a5fd6, #0000ff);
             color: white;
-            padding: 15px 30px;
+            padding: 20px 50px;
             margin: 10px;
             border: none;
-            font-size: 16px;
+            font-size: 18px;
             cursor: pointer;
-            border-radius: 5px;
-            width: 200px;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(0, 0, 255, 0.5);
+            transition: 0.3s;
         }
 
         .btn:hover {
             background: linear-gradient(to right, #0000ff, #6a5fd6);
+            box-shadow: 0 0 20px rgba(0, 0, 255, 0.8);
+        }
+
+        .btn:active {
+            transform: scale(0.95);
+        }
+
+        .btn-channel {
+            background: #ff1493;
+            box-shadow: 0 0 20px rgba(255, 20, 147, 0.5);
+        }
+
+        .btn-channel:hover {
+            background: #ff0080;
+            box-shadow: 0 0 20px rgba(255, 20, 147, 0.8);
+        }
+
+        .navigation-buttons {
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+            margin-top: 20px;
+        }
+
+        .navigation-buttons a {
+            color: white;
+            text-decoration: none;
+            font-size: 18px;
+            text-transform: uppercase;
+            padding: 15px;
+            background: #333;
+            border-radius: 5px;
+            transition: background 0.3s;
+        }
+
+        .navigation-buttons a:hover {
+            background: #ff1493;
         }
 
         .vape-card {
@@ -54,6 +101,12 @@
             display: inline-block;
             width: calc(33% - 20px);
             box-sizing: border-box;
+            transition: transform 0.2s ease;
+        }
+
+        .vape-card:hover {
+            background: #444;
+            transform: scale(1.05);
         }
 
         .vape-card img {
@@ -72,18 +125,14 @@
             text-align: center;
         }
 
-        .vape-card:hover {
-            background: #444;
-        }
-
-        /* Mobile responsiveness */
+        /* Mobile Responsiveness */
         @media (max-width: 768px) {
             .vape-card {
                 width: calc(50% - 20px);
             }
 
             .btn {
-                width: 160px;
+                width: 200px;
             }
         }
 
@@ -93,46 +142,49 @@
             }
 
             .btn {
-                width: 140px;
+                width: 160px;
             }
         }
+
     </style>
 </head>
 <body>
 
     <h1>Добро пожаловать в Вейп Выбор</h1>
 
-    <!-- Step 1: Nicotine Strength -->
+    <!-- Screen 1: Nicotine Strength -->
     <div class="section active" id="step1">
         <h2>Выберите крепость никотина</h2>
         <button class="btn" onclick="chooseNicotine('5%')">5%</button>
         <button class="btn" onclick="chooseNicotine('2%')">2%</button>
         <button class="btn" onclick="chooseNicotine('2.5%')">2.5%</button>
+        <div class="navigation-buttons">
+            <a href="https://t.me/stas_vape" class="btn btn-channel">Перейти в канал</a>
+        </div>
     </div>
 
-    <!-- Step 2: Puff Range -->
+    <!-- Screen 2: Puff Amount -->
     <div class="section" id="step2">
         <h2>Выберите количество затяжек</h2>
         <button class="btn" onclick="choosePuffs('up to 15k')">До 15k</button>
         <button class="btn" onclick="choosePuffs('15k-30k')">15k-30k</button>
         <button class="btn" onclick="choosePuffs('40k+')">40k+</button>
-    </div>
-
-    <!-- Step 3: Budget -->
-    <div class="section" id="step3">
-        <h2>Выберите ваш бюджет</h2>
-        <button class="btn" onclick="chooseBudget('€10-')">€10-</button>
-        <button class="btn" onclick="chooseBudget('€10-30€')">€10-30€</button>
-        <button class="btn" onclick="chooseBudget('€30+')">€30+</button>
-    </div>
-
-    <!-- Step 4: Vape Results -->
-    <div class="section" id="step4">
-        <h2>Результаты выбора</h2>
-        <div class="scrollable-results" id="vape-results">
-            <!-- Dynamically populated results go here -->
+        <div class="navigation-buttons">
+            <a href="https://t.me/stas_vape" class="btn btn-channel">Перейти в канал</a>
+            <button class="btn" onclick="showStep('step1')">Назад</button>
         </div>
-        <button class="btn" onclick="nextStep()">Продолжить</button>
+    </div>
+
+    <!-- Screen 3: Vape Selection -->
+    <div class="section" id="step3">
+        <h2>Выберите вейп</h2>
+        <div class="scrollable-results" id="vape-results">
+            <!-- Vapes will be dynamically inserted here -->
+        </div>
+        <div class="navigation-buttons">
+            <a href="https://t.me/stas_vape" class="btn btn-channel">Перейти в канал</a>
+            <button class="btn" onclick="showStep('step2')">Назад</button>
+        </div>
     </div>
 
     <script>
@@ -149,10 +201,6 @@
             })
             .catch(error => console.error('Error loading vape data:', error));
 
-        function nextStep() {
-            alert("Ваш вейп будет выбран, а вкусы отправлены вам.");
-        }
-
         function showStep(step) {
             document.querySelectorAll('.section').forEach(section => section.classList.remove('active'));
             document.getElementById(step).classList.add('active');
@@ -166,11 +214,6 @@
         function choosePuffs(range) {
             puffs = range;
             showStep('step3');
-        }
-
-        function chooseBudget(range) {
-            budget = range;
-            showStep('step4');
             filterVapes();
         }
 
@@ -179,10 +222,7 @@
                 return (vape.nicotine === nicotine) && 
                        ((puffs === "up to 15k" && vape.puffs <= 15000) || 
                         (puffs === "15k-30k" && vape.puffs > 15000 && vape.puffs <= 30000) || 
-                        (puffs === "40k+" && vape.puffs > 30000)) && 
-                       ((budget === "€10-" && vape.price <= 10) ||
-                        (budget === "€10-30€" && vape.price >= 10 && vape.price <= 30) ||
-                        (budget === "€30+" && vape.price > 30));
+                        (puffs === "40k+" && vape.puffs > 30000));
             });
 
             const resultsContainer = document.getElementById('vape-results');
