--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Вейп Выбор</title>
+    <title>🚬 VAPE PORTAL 9000</title>
     <style>
         /* Global Styles */
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
             background: #121212;
@@ -150,11 +150,12 @@
 </head>
 <body>
 
-    <h1>Добро пожаловать в Вейп Выбор</h1>
+    <h1>🚬 VAPE PORTAL 9000</h1>
+    <h2>Step into the future of flavor</h2>
 
     <!-- Screen 1: Nicotine Strength -->
     <div class="section active" id="step1">
-        <h2>Выберите крепость никотина</h2>
+        <h3>Выберите крепость никотина</h3>
         <button class="btn" onclick="chooseNicotine('5%')">5%</button>
         <button class="btn" onclick="chooseNicotine('2%')">2%</button>
         <button class="btn" onclick="chooseNicotine('2.5%')">2.5%</button>
@@ -165,7 +166,7 @@
 
     <!-- Screen 2: Puff Amount -->
     <div class="section" id="step2">
-        <h2>Выберите количество затяжек</h2>
+        <h3>Выберите количество затяжек</h3>
         <button class="btn" onclick="choosePuffs('up to 15k')">До 15k</button>
         <button class="btn" onclick="choosePuffs('15k-30k')">15k-30k</button>
         <button class="btn" onclick="choosePuffs('40k+')">40k+</button>
@@ -177,7 +178,7 @@
 
     <!-- Screen 3: Vape Selection -->
     <div class="section" id="step3">
-        <h2>Выберите вейп</h2>
+        <h3>Выберите вейп</h3>
         <div class="scrollable-results" id="vape-results">
             <!-- Vapes will be dynamically inserted here -->
         </div>
